--- a/style.css
+++ b/style.css
@@ -206,31 +206,33 @@ img
 
 .t_a_p
 {
-  font-size: 30px;
+  top:-650px;
+  left:400px;
+  float: left;
+  font-size: 34px;
   font-family: "Open Sans";
   color: rgb(30, 30, 30);
   text-transform: uppercase;
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 823.062px;
-  top: 154.931px;
-  width: 388px;
+  position: relative;
+  width: 450px;
   height: 21px;
   z-index: 333;
 }
 
 .text02 
 {
+  bottom: 600px;
+  left:-5px;
+  float: left;
   font-size: 18px;
   font-family: "Open Sans";
   color: rgb(233, 105, 21);
   text-transform: uppercase;
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 838.591px;
-  top: 190.872px;
+  position: relative;
   height: 16px;
   z-index: 332;
 }
