--- a/style.css
+++ b/style.css
@@ -2408,11 +2408,11 @@ a:hover
 ._1 
 {
   background-image: url("img/1.png");
-  position: absolute;
-  left: 525px;
-  top: 962px;
+  position: relative;
   width: 61px;
   height: 61px;
+  margin-left: 155px;
+  margin-top: -30px;
   z-index: 279;
 }
 
@@ -2441,9 +2441,7 @@ a:hover
 .pic_1
 {
   background-image: url("img/pic_1.png");
-  position: absolute;
-  left: 375px;
-  top: 829px;
+  position: relative;
   width: 370px;
   height: 164px;
   z-index: 266;
@@ -2875,4 +2873,8 @@ a:hover
   text-align: center;
   font-size: 14px;
   font-family: "Open Sans";
+}
+
+.about{
+  height: 545px;
 }
