--- a/style.css
+++ b/style.css
@@ -658,9 +658,9 @@ img
     text-transform: uppercase;
     line-height: 1.2;
     text-align: center;
-    position: absolute;
-    left: 377.719px;
-    top: 1302.288px;
+    position: relative;
+    margin-top: 55px;
+  
     height: 22px;
     z-index: 260;
 }
@@ -673,12 +673,15 @@ img
   text-transform: uppercase;
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 435.634px;
-  top: 1375.757px;
-  width: 152px;
+  position: relative;
+
+  float: left;
   height: 12px;
   z-index: 259;
+}
+
+.text26 b{
+  margin-left: 15px;
 }
 
 .text27
@@ -689,9 +692,8 @@ img
   text-transform: uppercase;
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 435.634px;
-  top: 1479.757px;
+  position: relative;
+  float: left;
   width: 197px;
   height: 15px;
   z-index: 258;
@@ -719,11 +721,19 @@ img
   color: rgb(65, 69, 69);
   line-height: 1.2;
   text-align: left;
-  position: absolute;
-  left: 436.334px;
-  top: 1400.709px;
+  position: relative;
+  margin-left: 15px;
+  margin-top: 10px;
+  float: left;
   height: 16px;
   z-index: 256;
+}
+
+.remark{
+  width: 520px;
+  height: 55px;
+  margin-left: 50px;
+  margin-top: 55px;
 }
 
 .text30
@@ -733,9 +743,8 @@ img
   color: rgb(65, 69, 69);
   line-height: 1.2;
   text-align: left;
-  position: absolute;
-  left: 436.334px;
-  top: 1506.655px;
+  position: relative;
+  float: left;
   height: 16px;
   z-index: 255;
 }
@@ -1339,9 +1348,8 @@ img
   color: rgb(117, 117, 117);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 1010.633px;
-  top: 1305.709px;
+  position: relative;
+  float: left;
   height: 17px;
   z-index: 250;
 }
@@ -1601,12 +1609,12 @@ img
 
 .video 
 {
-  position: absolute;
-  left: 1012px;
-  top: 1332px;
+  position: relative;
+  float: left;
   width: 533px;
   height: 335px;
   z-index: 249;
+
 }
 
 a 
@@ -2344,6 +2352,21 @@ a:hover
   z-index: 162;
 }
 
+.video_block{
+  background-image: url("img/bg_2.png");
+  background-repeat: no-repeat;
+}
+
+.left_block{
+  width:50%;
+  float: left;
+}
+
+.right_block{
+  width: 50%;
+  float: right;
+  margin-top: 55px;
+}
 
 .bg_2 
 {
@@ -2371,9 +2394,10 @@ a:hover
 .icon 
 {
   background-image: url("img/icon.png");
-  position: absolute;
-  left: 375px;
-  top: 1377px;
+  position: relative;
+
+
+  float: left;
   width: 46px;
   height: 47px;
   z-index: 251;
@@ -2393,9 +2417,8 @@ a:hover
 .icon3 
 {
   background-image: url("img/icon.png");
-  position: absolute;
-  left: 375px;
-  top: 1480px;
+  position: relative;
+  float: left;
   width: 46px;
   height: 47px;
   z-index: 253;
@@ -2908,4 +2931,11 @@ a:hover
   text-transform: uppercase;
   padding-top: 40px;
   padding-bottom: 38px;
+}
+
+.video_block{
+  position: relative;
+  width: 100%;
+  height: 460px;
+  float: left;
 }
