--- a/style.css
+++ b/style.css
@@ -770,11 +770,12 @@ img
   color: rgb(255, 255, 255);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 540.868px;
-  top: 1822.013px;
+  position: relative;
+  float: left;
+  margin-left: 25px;
   height: 25px;
   z-index: 205;
+  margin-top: 15px;
 }
 
 .text33 
@@ -785,9 +786,10 @@ img
   text-transform: uppercase;
   line-height: 1.2;
   text-align: left;
-  position: absolute;
-  left: 540.868px;
-  top: 1782.931px;
+  position: relative;
+  float: left;
+  margin-left: 25px;
+  
   height: 27px;
   z-index: 204;
 }
@@ -799,10 +801,10 @@ img
   color: rgb(36, 36, 36);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 1310.922px;
-  top: 1764px;
-  width: 194px;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 22px;
+  width: 208px;
   height: 43px;
   z-index: 221;
 }
@@ -814,9 +816,10 @@ img
   color: rgb(88, 88, 88);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 1315.657px;
-  top: 1830.992px;
+  position: relative;
+  margin-top: 12px;
+  margin-left: 11px;
+  float: left;
   height: 12px;
   z-index: 220;
 }
@@ -868,13 +871,34 @@ img
   
   background-image: url("img/normal4t.png");
   text-align: center;
-  position: absolute;
-  left: 558.123px;
-  top: 1875.992px;
+  position: relative;
+  float: left;
   width: 146px;
   height: 10px;
   z-index: 233;
   cursor: pointer;
+}
+
+.why_us_header{
+  position: relative;
+  width: 250px;
+  padding-top: 42px;
+  padding-bottom: 42px;
+  margin: 0 auto;
+      font-size: 20px;
+    font-family: "Open Sans";
+    color: rgb(65, 69, 69);
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.item{
+  width: 240px;
+  height: 150px;
+  margin-left: 50px;
+  position: relative;
+  float: left;
 }
 
 .text40 
@@ -899,10 +923,10 @@ img
   color: rgb(36, 36, 36);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 393.909px;
-  top: 2362.546px;
-  width: 220px;
+  position: relative;
+  float: left;
+  margin-top: 20px;
+  width: 244px;
   height: 74px;
   z-index: 144;
 }
@@ -1341,6 +1365,43 @@ img
   z-index: 48;
 }
 
+.promo{
+  height: 550px;
+  position: relative;
+  float: left;
+  width: 100%;
+  background-image: url(img/promo_bg.png);
+  background-position: 47% 50%;
+  overflow: hidden;
+}
+
+.promo form{
+    border-radius: 6px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.36);
+    position: relative;
+    margin-top: 37px;
+    margin-left: 150px;
+    opacity: 1;
+    float: left;
+    width: 270px;
+    height: 470px;
+    z-index: 209;
+}
+
+.promo .request_top_txt{
+  color:#000;
+}
+
+.why_us{
+  width: 100%;
+  height: 450px;
+  float: left;
+  position: relative;
+  background-image: url("img/bg_4.png");
+  background-repeat: no-repeat;
+}
+
 .text71 
 {
   font-size: 17px;
@@ -1349,6 +1410,7 @@ img
   line-height: 1.2;
   text-align: center;
   position: relative;
+  margin-bottom: 10px;
   float: left;
   height: 17px;
   z-index: 250;
@@ -2213,9 +2275,9 @@ a:hover
 .star8
 {
   background-image: url("img/star.png");
-  position: absolute;
-  left: 477px;
-  top: 2301px;
+  position: relative;
+  float: left;
+  margin-left: 40%;
   width: 45px;
   height: 45px;
   z-index: 159;
@@ -2224,23 +2286,37 @@ a:hover
 
 .normal4 
 {
-  background-image: url("img/normal4.png");
-  position: absolute;
-  left: 544px;
-  top: 1865px;
-  width: 173px;
+  background-color: #d5d5d5;
+  border-radius: 10px;
+  background-repeat: no-repeat;
+  position: relative;
+  float: left;
+  width: 182px;
   height: 31px;
   z-index: 230;
   cursor: pointer;
+  margin-left: 25px;
+  margin-top: 15px;
+  padding-top: 7px;
+  padding-left: 10px;
+  font-family: "Ubuntu";
+  font-size: 12pt;
+}
+
+.podarok{
+  width: 750px;
+  height: 400px;
+  margin-top: 67px;
+  float: left;
 }
 
 .normal4:hover
 {
-  background-image: url("img/normal4_h.png");
-  position: absolute;
-  left: 544px;
-  top: 1865px;
-  width: 173px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  position: relative;
+  float: left;
+  width: 182px;
   height: 31px;
   z-index: 230;
   cursor: pointer;
@@ -2299,9 +2375,9 @@ a:hover
 .bg_zamok_2
 {
   background-color: rgb(213, 213, 213);
-  position: absolute;
-  left: 1272px;
-  top: 1817px;
+  position: relative;
+  float: left;
+  margin-top: 12px;
   width: 273px;
   height: 38px;
   z-index: 218;
@@ -2310,9 +2386,10 @@ a:hover
 .icon_zamok_2
 {
   background-image: url("img/icon_zamok.png");
-  position: absolute;
-  left: 1294px;
-  top: 1825px;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 8px;
+  float: left;
   width: 15px;
   height: 21px;
   z-index: 219;
@@ -2322,21 +2399,23 @@ a:hover
 .photo 
 {
   background-image: url("img/photo.png");
-  position: absolute;
-  left: 543px;
-  top: 1930px;
-  width: 238px;
+  background-repeat: no-repeat;
+  position: relative;
+  float: left;
+  width: 538px;
   height: 123px;
+  margin-left: 178px;
+  margin-top: 37px;
   z-index: 207;
 }
 
 .present 
 {
   background-image: url("img/present.png");
-  position: absolute;
-  left: 415px;
-  top: 1777px;
+  position: relative;
+  float: left;
   width: 106px;
+  margin-left: 50px;
   height: 119px;
   z-index: 206;
 }
@@ -2383,9 +2462,8 @@ a:hover
 {
   background-image: url("img/tongat.png");
   opacity: 0.2;
-  position: absolute;
-  left: 892px;
-  top: 1763px;
+  position: relative;
+  float: left;
   width: 305px;
   height: 415px;
   z-index: 203;
@@ -2815,7 +2893,7 @@ a:hover
     color: rgb(255, 255, 255);
     line-height: 1.2;
     text-align: center;
-    padding: 25px;
+    padding: 14px;
 }
 
 .zamok{
