--- a/style.css
+++ b/style.css
@@ -1402,6 +1402,62 @@ img
   background-repeat: no-repeat;
 }
 
+.glide{
+  background-image: url("img/photo2.png");
+  width: 172px;
+  height: 340px;
+  float: left;
+  margin-left: 35px;
+  z-index: 100;
+
+
+}
+
+.glide_price{
+  width: 104px;
+  height: 104px;
+      border-radius: 50%;
+    background-color: rgb(4, 156, 225);
+    z-index: 101;
+    float: left;
+    margin-left: -68px;
+    margin-top: -38px;
+    position: relative;
+}
+
+.glide_price span{
+position: relative;
+float: left;
+margin-top: 40px;
+margin-left: 5px;
+
+    font-size: 24px;
+    font-family: "Open Sans";
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    text-align: left;
+}
+
+.rec_head{
+  width:400px;
+  margin: 0 auto;
+      font-size: 20px;
+    font-family: "Open Sans";
+    color: rgb(32, 126, 169);
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+
+}
+
+.recommended{
+  background-image: url("img/bg_5.png");
+  width: 100%;
+  height: 460px;
+  position: relative;
+  float: left;
+}
+
 .text71 
 {
   font-size: 17px;
