--- a/style.css
+++ b/style.css
@@ -1220,9 +1220,10 @@ img
   color: rgb(106, 172, 234);
   line-height: 1.2;
   text-align: center;
-  position: absolute;
-  left: 1233.378px;
-  top: 2771.383px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 26px;
   width: 223px;
   height: 32px;
   z-index: 91;
@@ -1447,13 +1448,94 @@ margin-left: 5px;
     text-transform: uppercase;
     line-height: 1.2;
     text-align: center;
+padding-top: 40px;
+padding-bottom: 50px;
+}
 
+.rec_txt{
+  float: left;
+}
+
+.rec_txt p{
+      font-size: 14px;
+    font-family: "Open Sans";
+    color: rgb(36, 36, 36);
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: left;
+    margin-left: 18px;
+}
+
+.rec_txt ul{
+  list-style-image: url(img/galka_2.png);
+      font-size: 16px;
+    font-family: "Open Sans";
+    color: rgb(88, 88, 88);
+    line-height: 2.25;
+    text-align: left;
+}
+
+.rec_txt ul li{
+  padding-left: 9px;
+  padding-bottom: 5px;
+}
+
+.rec_txt button{
+  width: 230px;
+  height: 42px;
+  background-color: #207ea9;
+  border-radius: 20px;
+  border:0;
+  font-family: "Open Sans";
+  font-size: 15pt;
+  color:#fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-bottom: 4px;
+  margin-left: 15px;
+}
+
+.rec_table{
+  width:371px;
+  height: 300px;
+  float: left;
+  margin-left: 24px;
+  background-color: #fff;
+  border:1px solid #d5d5d5;
+}
+
+.rec_table table{
+  border-spacing: 0px 0px;
+  width: 290px;
+  height: 205px;
+  margin-left: 45px;
+  margin-top: 10px;
+}
+
+
+
+.rec_table .left_cell{
+  border-right: 1px solid #bebebe;
+  border-bottom: 1px solid #bebebe;
+  text-align: center;
+  
+}
+
+
+
+.rec_table .right_cell{
+  border-bottom: 1px solid #bebebe;
+  text-align: center;
+}
+
+.rec_table .last{
+  border-bottom: 0px solid #bebebe;
 }
 
 .recommended{
   background-image: url("img/bg_5.png");
   width: 100%;
-  height: 460px;
+  height: 480px;
   position: relative;
   float: left;
 }
@@ -2181,9 +2263,8 @@ a:hover
   border-width: 1px;
   border-color: rgb(213, 213, 213);
   background-color: rgb(255, 255, 255);
-  position: absolute;
-  left: 1172px;
-  top: 2746px;
+  position: relative;
+  float: left;
   width: 374px;
   height: 301px;
   z-index: 85;
