--- a/style.css
+++ b/style.css
@@ -1521,6 +1521,139 @@ padding-bottom: 50px;
   
 }
 
+.faq{
+  width: 100%;
+  height: 400px;
+  position: relative;
+  float: left;
+  background-color: #e7e7e7;
+  background-image: url(img/bg_6.png);
+  background-position: 31%;
+  background-repeat: no-repeat;
+}
+
+.faq .cell{
+  width: 472px;
+  height: 40px;
+  background-color: #fcfcfc;
+  border-radius: 7px;
+  margin-top: 10px;
+}
+
+.faq .cell:nth-child(2){
+  margin-top: 0px;
+}
+
+.cell .txt{
+  font-family: "Open Sans";
+  font-size: 15px;
+  padding-top: 8px;
+  padding-left: 8px;
+}
+
+.cell .txt .sign{
+  color:#e96915;
+  font-size: 22pt;
+  float: right;
+  margin-top: -8px;
+  margin-right: 15px;
+}
+
+.cell:last-child .txt .sign{
+  margin-top: -29px;
+}
+
+.cell .txt .vopr{
+  float: left;
+  margin-top: 2px;
+}
+
+.cell .txt .quest{
+  float: left;
+  color:#e96915;
+  margin-right: 10px;
+  margin-top: -5px;
+  font-size: 20pt;
+}
+
+.faq .certs{
+  width: 572px;
+  height: 340px;
+  float: left;
+  margin-left: 65px;
+}
+
+.certs .head{
+  text-transform: uppercase;
+  width:160px;
+  margin:0 auto;
+  font-size: 20px;
+  font-family: "Open Sans";
+  color: rgb(65, 69, 69);
+  padding-top: 38px;
+  padding-bottom: 38px;
+}
+
+.slider{
+  width: 100%;
+  height: 275px;
+}
+
+.arrow_left{
+  background-image: url("img/arrow3.png");
+  position: relative;
+  float: left;
+  margin-top: 125px;
+  width: 18px;
+  height: 34px;
+  z-index: 47;
+}
+
+.arrow_right{
+    background-image: url("img/arrow2.png");
+    position: relative;
+    float: left;
+    margin-top: 125px;
+    margin-left: 50px;
+    width: 18px;
+    height: 34px;
+    z-index: 46;
+}
+
+.cert_item{
+    width: 200px;
+    height: 276px;
+    margin-left: 62px;
+    background-image: url("img/sertificat.png");
+    position: relative;
+    float: left;
+    width: 197px;
+    height: 278px;
+    z-index: 44;
+}
+
+.slider .last{
+  margin-left: 28px;
+}
+
+
+
+.questions{
+  width: 480px;
+  height: 340px;
+  margin-left: 50px;
+  float: left;
+}
+
+.questions .head{
+  width:280px;
+  margin: 0 auto;
+  padding-top: 38px;
+  padding-bottom: 38px;
+  font-family: "Open Sans";
+  font-size: 20px;
+  text-transform: uppercase;
+}
 
 
 .rec_table .right_cell{
