--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
 	src:url('font/Ubuntu-R.ttf');
 }
 
+@font-face{
+  font-family: "Open Sans ExtraBold";
+  src:url('font/OpenSans-ExtraBold.ttf');
+}
+
+@font-face{
+  font-family: "Open Sans Light";
+  src:url('font/OpenSans-Light.ttf');
+}
+
 
 
 body
@@ -158,15 +168,28 @@ img
   margin-top: 442px;
   margin-left: -312px;
   z-index: 319;
+
+  
+}
+
+.price #rub{
+  font-family: "Open Sans Light";
+  font-size:12pt;
+  color: #fff;
+  margin-left: 45px;
 }
 
 .price span{
   position: relative;
-  margin-left: 30px;
+  margin-left: 16px;
   top: 38px;
   font-size: 30px;
   color: #fff;
   text-align: center;
+  float: left;
+  margin-top: -10px;
+  font-family: "Open Sans ExtraBold";
+  font-size:30pt;
 }
 /*.price
 {
@@ -671,7 +694,7 @@ img
     text-align: center;
     position: relative;
     margin-top: 55px;
-  
+    float: left;
     height: 22px;
     z-index: 260;
 }
@@ -2788,9 +2811,13 @@ a:hover
 }
 
 .right_block{
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+
   width: 50%;
   float: right;
-  margin-top: -25px;
+  margin-top:40px;
 }
 
 .bottom_part{
@@ -3405,6 +3432,10 @@ a:hover
   width: 100%;
   height: 460px;
   float: left;
+}
+
+.video_container{
+  padding-top: 1px;
 }
 
 .bot_phone{
